Fixes minor UI issue with dropdown options in dark mode

--- a/accepted/src/app/components/dropdown-list/dropdown-list.component.less
+++ b/accepted/src/app/components/dropdown-list/dropdown-list.component.less
@@ -3,5 +3,9 @@ select {
   border-bottom: 2px solid #e0e0e0;
   color: inherit;
 
+  option {
+    color: #616161
+  }
+
   background-color: transparent;
 }
